update game assets

--- a/assets/locales/dialogs/cristal-den/potioks/matriarch.en.json
+++ b/assets/locales/dialogs/cristal-den/potioks/matriarch.en.json
@@ -10,7 +10,7 @@
             "hide-bibin-involvement-alt": "Eyup. That's all I had to say.",
             "intrusion": "<i>As she notices you, this old mare hastly reaches for a laser gun and points it at your head.</i><br><br>Who the hell are you, and what are you doing here ?",
             "intrusion-bitty": "I see. Next time, I advise you make yourself announced. I could've blown your head off, just now.",
-            "intrusion-evasive": "I was just looking around ! Don't hurt me !",
+            "intrusion-evasive": "I was just looking around ! Don't shoot !",
             "intrusion-explore": "You like to explore ? That's rich. How did you slip through my secretary's gaze ?",
             "intrusion-on-sneaked-in": "Are you now ? That's a pretty useful skill. Good for you. But I guess it doesn't work on everyone, because you definitely caught my attention. Would you be interested in working with the Potiok family ? I have just the right job for someone of your caliber.",
             "intrusion-on-sneaked-in-accept-job": "It would be an honor to be of service to the Potioks.",
@@ -22,7 +22,11 @@
             "on-bitty-intrusion-go-on": "I'll keep that in mind.",
             "on-bitty-intrusion-secrecy": "I understand. But considering the information I bring to you, I believe it was a good decision to keep our meeting secret.",
             "praise-bitty-reason-loyalty": "Bitty recruited me and paid me. I feel like I owe her some loyalty.",
+            "prompt": "You wanted to see me ? What is it ?",
+            "prompt-exit": "Nothing, sorry for disturbing you.",
+            "report": "Yes, did you find out anything new ?",
             "report-bibin-involvement": "It turns out Bibin was responsible for the sabotages. He arranged for a slummer to become water carrier at Hillburrow. The slummer then planted explosives.",
+            "sabotage-exit": "[...]",
             "sabotage-report": "Bitty wants you to know that we've just stopped a ploy to sabotage the coal mine.",
             "sabotage-report-ask-more-slaves": "Some of the slaves and tools were destroyed by the saboteurs. Maybe if you could help Bitty get back on track, the production could start stepping up sooner rather than later.",
             "sabotage-report-confirm-mine-output": "Yeah, Bitty will manage for sure.",
@@ -48,6 +52,8 @@
             "saboteur-interrogated-by-bitty": "I brought him to Bitty. She interrogated him and had him killed for his crimes.",
             "saboteur-killed-by-player": "He tried to get rid of me when I confronted him. I had no choice but to kill him.",
             "saboteur-slipped-away": "I found definitive proof that he was involved... but he slipped away before we could arrest him.",
+            "sneak-job-reentry": "Can you tell me again about the job involving Bibin ?",
+            "sneak-job-report": "About the spy you sent at Bibin's...",
             "sneak-job/about-reward": "I see you know how to do business. I will pay you {{sneakJobReward}} caps once the job is done. Is that okay with you ?",
             "sneak-job/accept": "I'm sure of it. I will solve the problem and come back to you at once.",
             "sneak-job/accept-reward": "It's a fair price. You can count on me.",
@@ -62,6 +68,7 @@
             "sneak-job/pre-entry-alt": "I'm not worried about that. You look like you have a lot of free time.",
             "sneak-job/reject": "I don't think I can. It wouldn't be easy, and if I get caught, I'll just cause you even more trouble.",
             "sneak-job/reject-reward": "I'm sorry, I'm not risking my life for this much.",
+            "sneak-job/report": "Yes ? Did you find out anything new ?",
             "sneak-job/reward-not-increased": "I understand your concern, but I'm working on limited funds... and if you do get caught, it'll cause even more trouble. So how about we both bet you'll come back alive and successful, and get paid a reasonable amount of money for it ?",
             "was-sent-by-bibin": "Bibin sends his regards. <i>[Start fighting]</i>",
             "was-sent-by-bitty": "I've been sent by Bitty Potiok. I have important information to relay.",
