adds french translation for loading screen

--- a/assets/locales/interface.fr.json
+++ b/assets/locales/interface.fr.json
@@ -35,6 +35,7 @@
     "Take": "Prendre",
     "Take all": "Prendre tout",
     "Leave": "Laisser",
+    "Loading": "Chargement",
     "Your offer": "Votre offre",
     "are-you-sure": "Etes-vous sur ?",
     "controls-dialog": "Contrôles",
