implements potiok spy quest

--- a/assets/locales/dialogs/cristal-den/potioks/matriarch.en.json
+++ b/assets/locales/dialogs/cristal-den/potioks/matriarch.en.json
@@ -1,11 +1,13 @@
 {
     "dialogs": {
         "cristal-den/potioks/matriarch": {
+            "ask-about-bibin-feud": "Why are you and Bibin not on friendly terms anyway ?",
             "back-to-sabotage-report": "I see.",
             "bitty-appreciation-bad": "Well, I'm not gonna lie. She looks more like a pampered child than a proper leader to me.",
             "bitty-appreciation-good": "Seems like a tightly run operation to me. Her workers respect her, and the townfolks fear her.",
             "bitty-appreciation-medium": "She seems to be doing okay. The mine could produce more, and she's trying to improve those results.",
             "bitty-appreciation-reject": "Honestly, I don't think I have enough experience to judge.",
+            "go-back-to-sneak-job-report": "[...]",
             "hide-bibin-involvement": "We've caught the pony who was planting explosives at the mine.",
             "hide-bibin-involvement-alt": "Eyup. That's all I had to say.",
             "intrusion": "<i>As she notices you, this old mare hastly reaches for a laser gun and points it at your head.</i><br><br>Who the hell are you, and what are you doing here ?",
@@ -21,11 +23,23 @@
             "intrusion/entry": "Do you think I'm just gonna let you go ? What were you snooping around for ?",
             "on-bitty-intrusion-go-on": "I'll keep that in mind.",
             "on-bitty-intrusion-secrecy": "I understand. But considering the information I bring to you, I believe it was a good decision to keep our meeting secret.",
+            "on-report-death-misunderstanding": "But... I thought you wanted him dead ? You said I should make sure he wouldn't talk !",
+            "on-report-death-sorry": "I'm sorry. If it's any consolation, this was probably the easy way out from him. Bibin's band roughened him up pretty bad.",
+            "on-report-death-sorry-alt": "I'm sorry. There's just no way I could've gotten him out of there in one piece.",
+            "on-report-death-unapologetic": "It's a harsh world. If you stick your neck out for every \"good hearted\" pony out there, you'll soon end up without a neck. I did what I had to do.",
             "praise-bitty-reason-loyalty": "Bitty recruited me and paid me. I feel like I owe her some loyalty.",
             "prompt": "You wanted to see me ? What is it ?",
             "prompt-exit": "Nothing, sorry for disturbing you.",
             "report": "Yes, did you find out anything new ?",
             "report-bibin-involvement": "It turns out Bibin was responsible for the sabotages. He arranged for a slummer to become water carrier at Hillburrow. The slummer then planted explosives.",
+            "report-cancel": "Nothing new for now.",
+            "report-details-done": "That's all I know.",
+            "report-move-to-questions": "[next]",
+            "report-savage-connection": "Bibin had a private meeting with some suspicious looking pony from out of town.",
+            "report-spy-talked": "I'm afraid your spy couldn't keep it shut. Bibin knows you sent him.",
+            "report-vague-died": "I tried to sneak him out, but he died in the process.",
+            "report-vague-killed": "I put him out of his misery.",
+            "report-vague-saved": "I got him out of there. He went on his own way afterwards.",
             "sabotage-exit": "[...]",
             "sabotage-report": "Bitty wants you to know that we've just stopped a ploy to sabotage the coal mine.",
             "sabotage-report-ask-more-slaves": "Some of the slaves and tools were destroyed by the saboteurs. Maybe if you could help Bitty get back on track, the production could start stepping up sooner rather than later.",
@@ -52,23 +66,41 @@
             "saboteur-interrogated-by-bitty": "I brought him to Bitty. She interrogated him and had him killed for his crimes.",
             "saboteur-killed-by-player": "He tried to get rid of me when I confronted him. I had no choice but to kill him.",
             "saboteur-slipped-away": "I found definitive proof that he was involved... but he slipped away before we could arrest him.",
+            "sneak-job-outsider-no-clue": "Sorry, that's all I've been able to gather.",
+            "sneak-job-outsider-tatoo": "Wore a suit. Was hiding a neck tatoo. Sneaky Snack described him as a savage.",
             "sneak-job-reentry": "Can you tell me again about the job involving Bibin ?",
             "sneak-job-report": "About the spy you sent at Bibin's...",
+            "sneak-job-report-dead-spy": "I found him. Bibin was holding him captive. I made sure he'd never talk again.",
+            "sneak-job-report-found-spy": "I found him. He's held captive by Bibin's ponies.",
+            "sneak-job-report-spy-solve": "I found him. Bibin was holding him captive. I made sure he wouldn't talk.",
+            "sneak-job/about-bibin-feud": "It's a pretty short story, so I'll indulge your curiosity. The Den used to be all ours... we Potioks built it all. But as the town grew bigger, it became harder to manage all these people. We didn't really manage the eastward part of town... we lacked the means to do so. People would just settle there, and it became sort of a slum.<br/>Around a year ago, this Bibin buck showed up. He used his charismatic ways to convince people to build their own little faction inside the Den. He's been able to keep ponies under his influence ever since then. We don't know much, but he's been bringing weapons in his side of town. It would be nice for us to know exactly what he's up to. I doubt it's anything good.",
             "sneak-job/about-reward": "I see you know how to do business. I will pay you {{sneakJobReward}} caps once the job is done. Is that okay with you ?",
             "sneak-job/accept": "I'm sure of it. I will solve the problem and come back to you at once.",
             "sneak-job/accept-reward": "It's a fair price. You can count on me.",
             "sneak-job/ask-more-reward": "It's a dangerous job. I'm staking my own life there. I think it's worth more than {{sneakJobReward}} caps.",
             "sneak-job/ask-reward": "Sure, I'll do it. How much are you ready to invest in that project ?",
+            "sneak-job/done": "Well. This is it then. You've been useful to me, and you completed the job. You've earned your reward.<br/><br/><i>She hoofs over {{sneakJobReward}} caps.</i><br/><br/>Do come back to see me. These are troubled times for the Den. I'm sure I'll eventually find some other job fitting your particular skillset.",
             "sneak-job/entry": "I sent somepony to infiltrate Bibin's home and keep an eye on him. We've lost contact sometime ago. It's safe to assume that they've either been caught or turned their coat. I'm hoping you'll be more trustworthy than they were. I want you to find out what happened to them. If they betrayed me, or if they got captured... do whatever you see fit to ensure they won't act against us, or give away any information about us to Bibin. Do you think you could do that ?",
             "sneak-job/entry-alt-go-on": "[...]",
             "sneak-job/increase-reward": "That's a fair point. You do look talented enough. I guess I could invest a little more in you. How about {{sneakJobReward}} ?",
             "sneak-job/on-accepted": "Good. Get on with it then. I'll see you later.",
+            "sneak-job/on-found": "I take it he's still alive then ? Interesting. It likely means that he either did not talk at all, or not enough. This is good news. But I'm a bit disappointed at you for coming back to me without doing anything about it. My little ponies aren't supposed to act like drones: they must be able to take initatives... clearly, you failed to do just that.<br/>Let me make things clear so you don't fail me again. Go back there posthaste. Bring him back to me if you can. And if you can't, make sure he won't talk.",
+            "sneak-job/on-found-done": "Yes, mam.",
             "sneak-job/on-rejected": "That's a shame. Such wasted talent. Well then, this meeting is over, you may take your leave.",
+            "sneak-job/on-report-death-misjudged": "Well... I did pick you for the job, then left the specifics of this mission to your own judgement. That makes me responsible as well. I know where to stand with you now, and that's the whole purpose of this type of management.",
             "sneak-job/pre-entry": "Ah ! Don't give me none of that crap. You want to get close to us Potioks ? Just listen to me, and I'll make sure you're well taken care of.",
             "sneak-job/pre-entry-alt": "I'm not worried about that. You look like you have a lot of free time.",
             "sneak-job/reject": "I don't think I can. It wouldn't be easy, and if I get caught, I'll just cause you even more trouble.",
             "sneak-job/reject-reward": "I'm sorry, I'm not risking my life for this much.",
             "sneak-job/report": "Yes ? Did you find out anything new ?",
+            "sneak-job/report-death": "I take it you killed him then. It seems I overestimated your skills... I believed you'd be able to get him out of there without spilling needless blood. He might've lacked the skills to complete the job, or even the loyalty to keep his muzzle shut, but he was a good hearted and hard working pony who didn't deserve such a fate.",
+            "sneak-job/report-death-consolation": "I see. Rest assured he will be avenged. Whatever Bibin's up to, I will put an end to it and restore order.",
+            "sneak-job/report-details": "Very well. Please, tell me more. Did you learn something else ?",
+            "sneak-job/report-lived": "Well... I would've liked to have my own talk with him... but I'm glad to now he's alive and no longer a threat. You did a good job.",
+            "sneak-job/report-on-bibin-knows": "Well... I kinda figured it wouldn't be too hard to extort a confession out of Sneaky Snack... but it doesn't really matter anyway. Bibin already knows we're hostile to him. After all, he's the one who started it all.",
+            "sneak-job/report-on-bibin-outsider": "Alright. You've got my attention now. I was already able to infer that something like this was going on. What I need to know is who this outsider is. Got any other clue for me ?",
+            "sneak-job/report-savage": "<i>As she hears your description, she first looks surprised... then thoughtful. After a couple seconds, she looks at you intently and says:</i><br/><br/>Interesting... thank you, you've done a goob job.",
+            "sneak-job/report-vague": "Good. Very good. So, what happened to him ?",
             "sneak-job/reward-not-increased": "I understand your concern, but I'm working on limited funds... and if you do get caught, it'll cause even more trouble. So how about we both bet you'll come back alive and successful, and get paid a reasonable amount of money for it ?",
             "was-sent-by-bibin": "Bibin sends his regards. <i>[Start fighting]</i>",
             "was-sent-by-bitty": "I've been sent by Bitty Potiok. I have important information to relay.",
