refactore ShopShelf and implement OwnedStorage

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -24,6 +24,9 @@
         "shop-welcome-1": "Hi",
         "shop-welcome-2": "Welcome",
         "shop-welcome-3": "Hello",
+        "forbid-rummaging-1": "Don't touch that.",
+        "forbid-rummaging-2": "Leave that alone.",
+        "forbid-rummaging-3": "Hooves off my stuff !",
         "steal-warning-1": "Hey ! Put that back !",
         "steal-warning-2": "Don't test me. Give it back.",
         "steal-warning-3": "Last warning ! Put that back, or else !",
