--- a/assets/locales/dialogs/cristal-den/potioks/matriarch.en.json
+++ b/assets/locales/dialogs/cristal-den/potioks/matriarch.en.json
@@ -77,6 +77,10 @@
             "sneak-job/about-reward": "I see you know how to do business. I will pay you {{sneakJobReward}} caps once the job is done. Is that okay with you ?",
             "sneak-job/accept": "I'm sure of it. I will solve the problem and come back to you at once.",
             "sneak-job/accept-reward": "It's a fair price. You can count on me.",
+            "sneak-job/already-done": "Actually... I think I've already met this spy of yours.",
+            "sneak-job/alreadyFound/died": "Sorry to be the bearer of bad news, but he kicked the bucket.",
+            "sneak-job/alreadyFound/escorted": "I helped him escape. I don't know what happened to him afterwards.",
+            "sneak-job/alreadyFound/stillCaptive": "As far as I know, Bibin's still holding him captive.",
             "sneak-job/ask-more-reward": "It's a dangerous job. I'm staking my own life there. I think it's worth more than {{sneakJobReward}} caps.",
             "sneak-job/ask-reward": "Sure, I'll do it. How much are you ready to invest in that project ?",
             "sneak-job/done": "Well. This is it then. You've been useful to me, and you completed the job. You've earned your reward.<br/><br/><i>She hoofs over {{sneakJobReward}} caps.</i><br/><br/>Do come back to see me. These are troubled times for the Den. I'm sure I'll eventually find some other job fitting your particular skillset.",
@@ -84,6 +88,7 @@
             "sneak-job/entry-alt-go-on": "[...]",
             "sneak-job/increase-reward": "That's a fair point. You do look talented enough. I guess I could invest a little more in you. How about {{sneakJobReward}} ?",
             "sneak-job/on-accepted": "Good. Get on with it then. I'll see you later.",
+            "sneak-job/on-already-found": "Well, I'll be damned. I figured you'd be efficient, but that goes beyond my expectations. So, tell me, what happened to him ?",
             "sneak-job/on-found": "I take it he's still alive then ? Interesting. It likely means that he either did not talk at all, or not enough. This is good news. But I'm a bit disappointed at you for coming back to me without doing anything about it. My little ponies aren't supposed to act like drones: they must be able to take initatives... clearly, you failed to do just that.<br/>Let me make things clear so you don't fail me again. Go back there posthaste. Bring him back to me if you can. And if you can't, make sure he won't talk.",
             "sneak-job/on-found-done": "Yes, mam.",
             "sneak-job/on-rejected": "That's a shame. Such wasted talent. Well then, this meeting is over, you may take your leave.",
@@ -100,6 +105,7 @@
             "sneak-job/report-on-bibin-knows": "Well... I kinda figured it wouldn't be too hard to extort a confession out of Sneaky Snack... but it doesn't really matter anyway. Bibin already knows we're hostile to him. After all, he's the one who started it all.",
             "sneak-job/report-on-bibin-outsider": "Alright. You've got my attention now. I was already able to infer that something like this was going on. What I need to know is who this outsider is. Got any other clue for me ?",
             "sneak-job/report-savage": "<i>As she hears your description, she first looks surprised... then thoughtful. After a couple seconds, she looks at you intently and says:</i><br/><br/>Interesting... thank you, you've done a goob job.",
+            "sneak-job/report-saved": "I got him out of there. He went on his own way afterwards.",
             "sneak-job/report-vague": "Good. Very good. So, what happened to him ?",
             "sneak-job/reward-not-increased": "I understand your concern, but I'm working on limited funds... and if you do get caught, it'll cause even more trouble. So how about we both bet you'll come back alive and successful, and get paid a reasonable amount of money for it ?",
             "was-sent-by-bibin": "Bibin sends his regards. <i>[Start fighting]</i>",
