--- a/assets/locales/dialogs/cristal-den/potioks/secretary.en.json
+++ b/assets/locales/dialogs/cristal-den/potioks/secretary.en.json
@@ -3,6 +3,7 @@
         "cristal-den/potioks/secretary": {
             "entry": "Yes, what's this about ?",
             "exit-entry": "Nothing, bye.",
+            "here-for-mission": "Miss Potiok is expecting me. I have new intel for her.",
             "on-matriarch-dead": "<i>She comes back looking distraught</i><br/><br/>The... the matriarch... she's dead.",
             "on-matriarch-ready-to-receive": "<i>After a minute, the secretary comes back:</i><br><br>Very well, the matriarch will receive you. Please enter the room.",
             "on-sent-by-bitty": "I see. Please wait for a moment.<br><br><i>She gets up and heads towards the back room.",
