initial implementation for Bibin's meeting and introduction quest

--- a/assets/locales/dialogs/hillburrow/water-carrier.en.json
+++ b/assets/locales/dialogs/hillburrow/water-carrier.en.json
@@ -21,6 +21,16 @@
             "confession-ask-about-murdering": "Out of curiosity, what would you do to someone who would threaten to ",
             "confession-ask-about-orders": "You don't look like a snitch to me. Whoever told you that was clearly worried about nothing.",
             "confession-exit": "Your secret is safe with me. As long as the Potioks get fucked, I'm a happy pony ! Keep up the good work, mate !",
+            "delivery-ask-details": "So... what's inside the suitcase ?",
+            "delivery-ask-details-again": "Oh, come on ! We're both friends with Mister Bibin, aren't we ?",
+            "delivery-ask-password": "You're also supposed to give me a password. What is it ?",
+            "delivery-contents-entry": "Oh. Sorry, I'm not supposed to tell anypony.",
+            "delivery-contents-failure": "Yes, but Bibin told me not to tell anypony. You are anypony. I can't tell you.",
+            "delivery-contents-success": "I guess you're right... it's boomsticks. I have to plant those in the coal mine every once in a while.",
+            "delivery-entry": "Oh ! Thanks !",
+            "delivery-exit": "Well, my work here is done ! See you later !",
+            "delivery-message-received": "Oh, er... hi ! Thanks ! I won't disappoint !",
+            "delivery-tell-message": "He says hi, and he wants you to keep up the good work !",
             "entry": "Hey.",
             "interrogate-sabotage-1": "Look, you don't have to hide anything from me. I hate the Potioks, and the fact that they're working slaves to death over there. I think it's great you've been damaging their operation. I won't tell on you.",
             "interrogate-sabotage-2": "You're lying. The next thing that comes out of your mouth better be the truth, else your next chat will be with our goddesses in the beyond.",
@@ -35,7 +45,8 @@
             "sabotage-intimiadation-failed-reaction": "Bring it on !",
             "sabotage-intimidation-fail": "Oh... no... not again... I'm sorry. I can't let people know about this.",
             "sabotage-intimidation-success": "Please, don't hurt me ! I've been doing everything I was told to do. I'm just trying to be a good family member. I don't understand why everpony's so mad about it !",
-            "sabotage-let-go": "Alright. I was just curious about it. I don't care that you sabotaged the mines. I'm gonna go now. See you around !"
+            "sabotage-let-go": "Alright. I was just curious about it. I don't care that you sabotaged the mines. I'm gonna go now. See you around !",
+            "start-bibin-delivery": "I've got a delivery for you from a common friend in the Cristal Den slums."
         }
     }
 }
